--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --sidebar-width: 250px;
+  --sidebar-collapsed-width: 70px;
   --navbar-height: 70px;
   --primary-color: #007bff;
   --sidebar-bg: #f8f9fa;
@@ -24,14 +25,20 @@ body {
 .admin-sidebar {
   width: var(--sidebar-width);
   min-width: var(--sidebar-width);
+  transition: width 0.3s ease-in-out, transform 0.3s ease-in-out;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
   background-color: var(--sidebar-bg);
-  transition: transform 0.3s ease-in-out;
   z-index: 1030;
   overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.admin-sidebar .icon {
+  font-size: 14px;
+  /* transition: all 0.3s ease-in-out; */
 }
 
 .admin-sidebar.hide-on-mobile {
@@ -40,6 +47,50 @@ body {
 
 .admin-sidebar.show {
   transform: translateX(0%);
+  transition: all 0.3s ease-in-out;
+}
+
+.admin-sidebar.collapsed {
+  width: var(--sidebar-collapsed-width);
+  min-width: var(--sidebar-collapsed-width);
+}
+
+.admin-sidebar.collapsed .nav-link span {
+  /* transition: all 0.3s ease-in-out;
+  margin: 0;
+  font-size: 0; */
+  display: none;
+}
+
+.admin-sidebar.collapsed .sidebar-header h3 {
+  font-size: 0;
+}
+
+.admin-sidebar.collapsed .nav-link {
+  justify-content: center;
+  padding: 10px;
+}
+
+.admin-sidebar.collapsed .nav-link .me-2 {
+  margin-right: 0 !important;
+}
+
+.admin-sidebar.collapsed .nav-item .ms-auto {
+  display: none;
+}
+
+.sidebar-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid #dee2e6;
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar-header h3 {
+  margin: 0;
+  transition: all 0.3s ease-out;
 }
 
 /* --- MAIN CONTENT WRAPPER --- */
@@ -51,6 +102,10 @@ body {
   margin-left: var(--sidebar-width);
   transition: margin-left 0.3s ease-in-out;
   background-color: #f0f2f5;
+}
+
+.main-content-wrapper.collapsed {
+  margin-left: var(--sidebar-collapsed-width);
 }
 
 .main-content-wrapper.full-width {
@@ -83,7 +138,7 @@ body {
   z-index: 1025;
 }
 
-/* --- MEDIA QUERY FOR MOBILE --- */
+/* --- MOBILE --- */
 @media (max-width: 768px) {
   .admin-sidebar {
     transform: translateX(-100%);
